# Bluerov2_DRL

./: README.md  requirements.txt
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/TD3_VJET/: stable_baselines_env.py  stable_baselines_td3.py  velodyne_env.py  velodyne_td3.py
catkin_ws/TD3_VJET/assets/: bluerov2_scenario.launch  multi_robot_scenario.launch
catkin_ws/src/bluerov_sim/: CMakeLists.txt  package.xml
catkin_ws/src/bluerov_sim/config/: tags_standalone.yaml
catkin_ws/src/bluerov_sim/include/: gazebo_pressure_plugin.h  gazebo_range_sensor_plugin.h
catkin_ws/src/bluerov_sim/launch/: assignment_2.launch  example_apriltag_world.launch  example_with_camera.launch  gazebo_base.launch  gazebo_tags.launch  keyboard.launch  keyboard_control.launch  range_sensor.launch  spawn_tank.launch  spawn_vehicle.launch  velodyne_reader.launch
catkin_ws/src/bluerov_sim/models/uuv_bluerov2_heavy/: uuv_bluerov2_heavy.sdf
catkin_ws/src/bluerov_sim/models/uuv_bluerov2_heavy/meshes/: VLP16_base_1.dae  VLP16_base_2.dae  VLP16_scan.dae
catkin_ws/src/bluerov_sim/models/uuv_bluerov2_heavy_cam/: model.config  uuv_bluerov2_heavy_cam.sdf
catkin_ws/src/bluerov_sim/msg/: ActuatorCommands.msg  RangeMeasurement.msg  RangeMeasurementArray.msg
catkin_ws/src/bluerov_sim/nodes/: auto_arm_node.py  keyboard_control.py  mixer.py  position_server.py  range_sensor_node.py  rviz_visualizer.py  test_cmd_vel.py  velodyne_reader.py
catkin_ws/src/bluerov_sim/plugins/: gazebo_pressure_plugin.cpp  gazebo_range_sensor_plugin.cpp
catkin_ws/src/bluerov_sim/worlds/: base.world  bluerov_stage_2.world  tank_with_tags.world
catkin_ws/src/mavlink/message_definitions/v1.0/: common.xml
catkin_ws/src/mavros/mavros_extras/: CMakeLists.txt  mavros_plugins.xml
catkin_ws/src/mavros/mavros_extras/src/plugins/: setpoint_motor.cpp
catkin_ws/src/mavros/mavros_msgs/: CMakeLists.txt
catkin_ws/src/mavros/mavros_msgs/msg/: MotorSetpoint.msg
catkin_ws/src/multi_robot_scenario/launch/: TD3.world  bluerov2.gazebo.launch  bluerov_TD3.world  empty_world.launch  multi_robot_scenario.launch
catkin_ws/src/multi_robot_scenario/xacro/p3dx/: pioneer3dx.xacro
